Still trying for a clean git init

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ Podfile.lock
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+*.xcuserstate
+
+Matchismo2.xcodeproj/project.xcworkspace/xcuserdata/brillig.xcuserdatad/UserInterfaceState.xcuserstate
